reduce min width of content pages to try to fix overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ h3 {
     text-align: center;
     padding: 1rem 5rem;
     backdrop-filter: blur(5px);
-    background-image: url("res/paper.png");
 }
 
 @media all {
@@ -224,7 +223,7 @@ h3 {
 @media (max-width: 800px) {
     .document-content-container {
         width: 100%;
-        min-width: 400px;
+        min-width: 200px;
     }
 }
 
